--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "isomer": "git+https://github.com/jdan/isomer.git"
+  },
   "devDependencies": {
     "gulp-livereload": "~1.5.0",
     "browserify": "~4.1.6",
@@ -16,6 +18,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "BSD-2-Clause"
+  "author": "lain-dono",
+  "license": "MIT"
 }
