--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gulp-buffer": "0.0.2",
     "vinyl-source-stream": "~0.1.1",
     "gulp-watch": "~0.6.5",
-    "connect": "~2.18.0"
+    "connect": "~2.18.0",
+    "filesaver.js": "~0.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
